@@ -1,3 +1,7 @@
+2017-02-24  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/opt63.adb: New test.
+
 2017-02-22  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>
 
 	Backport from mainline
