@@ -1,3 +1,7 @@
+2017-02-24  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc-interface/trans.c (return_value_ok_for_nrv_p): Add sanity check.
+
 2016-11-22  Uros Bizjak  <ubizjak@gmail.com>
 
 	* gcc-interface/Make-lang.in (check-acats): Fix detection
